@@ -215,6 +215,12 @@ If you have these RPMs installed, you can uncomment the marked lines in either
 the Makefile or in nail.spec. Nail should then build cleanly with NSS support
 included, and that's all.
 
+On recent Solaris versions, NSS and NSPR are available in the packages
+SUNWmoznss, SUNWmoznss-devel, SUNWmoznspr, and SUNWmoznspr-devel. If these
+packages are installed, the following make variables activate NSS support:
+INCLUDES=-I/usr/sfw/include/mozilla/nspr -I/usr/sfw/include/mozilla/nss
+LDFLAGS=-L/usr/sfw/lib/mozilla -R/usr/sfw/lib/mozilla
+
 If you want to use NSS without RPMS, you can get binary or source .tar.gz
 archives from the Mozilla project pages:
 
@@ -231,4 +237,4 @@ simply assumes that you want to build NSS if it manages to build the test
 executable.
 
 
-        Gunnar Ritter                                   11/2/04
+        Gunnar Ritter                                   11/8/04
