@@ -38,6 +38,13 @@ WARN		= -Wall -Wno-parentheses -Werror
 # set something like the following paths. (You might also need to set LDFLAGS).
 #MOZINC		= /usr/include/mozilla-1.6
 #INCLUDES	= -I$(MOZINC)/nspr -I$(MOZINC)/nss
+# These paths are suitable to activate NSS support on Solaris, provided that
+# the packages SUNWmoznss, SUNWmoznss-devel, SUNWmoznspr, and SUNWmoznspr-devel
+# are installed.
+#MOZINC		= /usr/sfw/include/mozilla
+#MOZLIB		= /usr/sfw/lib/mozilla
+#INCLUDES	= -I$(MOZINC)/nspr -I$(MOZINC)/nss
+#LDFLAGS	= -L$(MOZLIB) -R$(MOZLIB)
 
 SHELL		= /bin/sh
 
